exists &{"sub"}; defined &{"sub"} WIP